--- a/.forestry/front_matter/templates/prices.yml
+++ b/.forestry/front_matter/templates/prices.yml
@@ -4,15 +4,18 @@ hide_body: true
 is_partial: false
 fields:
 - type: field_group_list
-  label: Oil Prices
-  name: oil_prices
+  label: Prices
+  name: prices
   fields:
   - type: text
     name: type_of_painting
     label: Type of painting
     description: Dimensions, etc.
   - type: text
-    name: price
-    label: Price
+    name: oil_price
+    label: Oil Price
+  - type: text
+    name: pastel_price
+    label: Pastel Price
 data_files:
 - _data/prices.yml
