--- a/_data/portraits.yml
+++ b/_data/portraits.yml
@@ -3,165 +3,165 @@ portraits:
 - image: "/v1467145985/rebecca-becker/xijp4rnhdmay0nyqfu9i.jpg"
   categories:
   - Pastel Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467144978/rebecca-becker/mluxrlfppgjffrlz3tjl.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145947/rebecca-becker/qwlboikscz9lbz9fcxpu.jpg"
   categories:
   - Pastel Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467149076/rebecca-becker/szkhtbijx3uzpxpowuqq.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467148732/rebecca-becker/gcqaemlaz3gtywsijfs3.jpg"
   categories:
   - Pet Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145174/rebecca-becker/hwrmspfqoajhikowddos.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145124/rebecca-becker/ckpe4xiyet0qn4qrzwnb.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467149087/rebecca-becker/wn75e8imc20pipozkhco.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467149011/rebecca-becker/s5anmicyu4661rb8xpyg.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: "Available ~ 30" x 40" ~ $1500"
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145960/rebecca-becker/tlyj05cpkjkjurwbyehr.jpg"
   categories:
   - Pastel Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467149063/rebecca-becker/gyeywchuhlxe8poe2tfl.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145008/rebecca-becker/lhe1se8klddnn3athnto.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145152/rebecca-becker/mt7wvr21j1jvcgipizvx.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145918/rebecca-becker/uylbhqg8yd0s7yqxvpp1.jpg"
   categories:
   - Pastel Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145999/rebecca-becker/piygmwoa81zpereheoaw.jpg"
   categories:
   - Pastel Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467144957/rebecca-becker/vlnsok6vbn4549xi0h4p.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467146023/rebecca-becker/zzhce0io5hicuyazcuox.jpg"
   categories:
   - Pastel Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467149052/rebecca-becker/hdjj6rf8v1dvh24akqx3.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145163/rebecca-becker/r0tikrxsvkjrx6rx4ctw.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145022/rebecca-becker/uevt4aomjv95ol2ki3bz.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467148714/rebecca-becker/cnxoj2ov8w5oatkoyy1o.jpg"
   categories:
   - Pet Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145073/rebecca-becker/nzdytr5qwstnwncfi5xs.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145973/rebecca-becker/ffungqeyk1chkmh7q0o5.jpg"
   categories:
   - Pastel Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467148740/rebecca-becker/n3ygdlzislbj2gv6qba3.jpg"
   categories:
   - Pet Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145094/rebecca-becker/qntvqtj0phe5wz3zd4ln.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467149097/rebecca-becker/fudj99dfqzfpgjygdenj.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467146012/rebecca-becker/n91tonnwd21ap4nnhmjm.jpg"
   categories:
   - Pastel Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467144940/rebecca-becker/ry8sfjej9hth31ajkid0.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467148702/rebecca-becker/tfp12clvtokcqljnifk2.jpg"
   categories:
   - Pet Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467149023/rebecca-becker/ersqupekvluwhtxkyyhv.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: "Available ~ 30" x 36" ~ $1300"
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467145045/rebecca-becker/plqnkbewvalty1oyrwn6.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467144992/rebecca-becker/jjn5zrwnzb65exnl5sjk.jpg"
   categories:
   - Oil Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
 - image: "/v1467148724/rebecca-becker/utugyvsy72zkqf3wyr4l.jpg"
   categories:
   - Pet Portraits
-  caption: ""
-  name: ""
+  caption: caption
+  name: name
