--- a/_data/portraits.yml
+++ b/_data/portraits.yml
@@ -43,7 +43,7 @@ portraits:
 - image: "/v1467149011/rebecca-becker/s5anmicyu4661rb8xpyg.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: "Available ~ 30" x 40" ~ $1500"
+  caption: Available ~ 30" x 40" ~ $1500
   name: name
 - image: "/v1467145960/rebecca-becker/tlyj05cpkjkjurwbyehr.jpg"
   categories:
@@ -148,7 +148,7 @@ portraits:
 - image: "/v1467149023/rebecca-becker/ersqupekvluwhtxkyyhv.jpg"
   categories:
   - Abstracts/Landscapes
-  caption: "Available ~ 30" x 36" ~ $1300"
+  caption: Available ~ 30" x 36" ~ $1300
   name: name
 - image: "/v1467145045/rebecca-becker/plqnkbewvalty1oyrwn6.jpg"
   categories:
