--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,8 +1,8 @@
 ---
 new_page_extension: md
 auto_deploy: true
-admin_path: 
-webhook_url: 
+admin_path:
+webhook_url:
 sections:
 - type: jekyll-pages
   label: Pages
@@ -15,14 +15,13 @@ sections:
 upload_dir: ''
 public_path: ''
 front_matter_path: ''
-use_front_matter_path: 
+use_front_matter_path:
 file_template: ":filename:"
 build:
   preview_env:
   - JEKYLL_ENV=staging
   preview_output_directory: _site
-  install_dependencies_command: bundle install --path vendor/bundle
+  install_dependencies_command: gem install bundler:1.17.2; bundle install --path vendor/bundle
   preview_docker_image: forestryio/ruby:2.6
   mount_path: "/srv"
-  instant_preview_command: bundle exec jekyll serve --drafts --unpublished --future
-    -d _site
+  instant_preview_command: gem install bundler:1.17.2; bundle exec jekyll serve --drafts --unpublished --future -d _site
