--- a/_data/portraits.yml
+++ b/_data/portraits.yml
@@ -4,234 +4,234 @@ portraits:
   categories:
   - Oil Portraits
   caption: ''
-  name: Kate
+  name: kwqzydnspwe4jnr0hdgd Kate
 - image: "/v1/rebecca-becker/qlska9clrifrvtdavkhb"
   categories:
   - Oil Portraits
   caption: ''
-  name: William
+  name: qlska9clrifrvtdavkhb William
 - image: "/v1/rebecca-becker/mluxrlfppgjffrlz3tjl"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: mluxrlfppgjffrlz3tjl
 - image: "/v1/rebecca-becker/jjn5zrwnzb65exnl5sjk"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: jjn5zrwnzb65exnl5sjk
 - image: "/v1/rebecca-becker/lhe1se8klddnn3athnto"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: lhe1se8klddnn3athnto
 - image: "/v1/rebecca-becker/uevt4aomjv95ol2ki3bz"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: uevt4aomjv95ol2ki3bz
 - image: "/v1/rebecca-becker/plqnkbewvalty1oyrwn6"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: plqnkbewvalty1oyrwn6
 - image: "/v1/rebecca-becker/nzdytr5qwstnwncfi5xs"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: nzdytr5qwstnwncfi5xs
 - image: "/v1/rebecca-becker/qntvqtj0phe5wz3zd4ln"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: qntvqtj0phe5wz3zd4ln
 - image: "/v1/rebecca-becker/ry8sfjej9hth31ajkid0"
   categories:
   - Oil Portraits
   caption: ''
-  name: Ella
+  name: ry8sfjej9hth31ajkid0 Ella
 - image: "/v1/rebecca-becker/mt7wvr21j1jvcgipizvx"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: mt7wvr21j1jvcgipizvx
 - image: "/v1/rebecca-becker/r0tikrxsvkjrx6rx4ctw"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: r0tikrxsvkjrx6rx4ctw
 - image: "/v1/rebecca-becker/hwrmspfqoajhikowddos"
   categories:
   - Oil Portraits
   caption:
-  name: ''
+  name: hwrmspfqoajhikowddos
 - image: "/v1/rebecca-becker/ckpe4xiyet0qn4qrzwnb"
   categories:
   - Oil Portraits
   caption: ''
-  name: Adrienne
+  name: ckpe4xiyet0qn4qrzwnb Adrienne
 - image: "/v1/rebecca-becker/vlnsok6vbn4549xi0h4p"
   categories:
   - Oil Portraits
   caption: ''
-  name: Isabel
+  name: vlnsok6vbn4549xi0h4p Isabel
 - image: "/v1/rebecca-becker/uylbhqg8yd0s7yqxvpp1"
   categories:
   - Pastel Portraits
   caption:
-  name: ''
+  name: uylbhqg8yd0s7yqxvpp1
 - image: "/v1/rebecca-becker/qwlboikscz9lbz9fcxpu"
   categories:
   - Pastel Portraits
   caption:
-  name: ''
+  name: qwlboikscz9lbz9fcxpu
 - image: "/v1/rebecca-becker/tlyj05cpkjkjurwbyehr"
   categories:
   - Pastel Portraits
   caption:
-  name: ''
+  name: tlyj05cpkjkjurwbyehr
 - image: "/v1/rebecca-becker/ffungqeyk1chkmh7q0o5"
   categories:
   - Pastel Portraits
   caption:
-  name: ''
+  name: ffungqeyk1chkmh7q0o5
 - image: "/v1/rebecca-becker/xijp4rnhdmay0nyqfu9i"
   categories:
   - Pastel Portraits
   caption:
-  name: ''
+  name: xijp4rnhdmay0nyqfu9i
 - image: "/v1/rebecca-becker/piygmwoa81zpereheoaw"
   categories:
   - Pastel Portraits
   caption:
-  name: ''
+  name: piygmwoa81zpereheoaw
 - image: "/v1/rebecca-becker/n91tonnwd21ap4nnhmjm"
   categories:
   - Pastel Portraits
   caption:
-  name: ''
+  name: n91tonnwd21ap4nnhmjm
 - image: "/v1/rebecca-becker/zzhce0io5hicuyazcuox"
   categories:
   - Pastel Portraits
   caption:
-  name: ''
+  name: zzhce0io5hicuyazcuox
 - image: "/v1/rebecca-becker/yuge1a3oqviyhzgkxaml"
   categories:
   - Pet Portraits
   caption: ''
-  name: Bailey
+  name: yuge1a3oqviyhzgkxaml Bailey
 - image: "/v1/rebecca-becker/tfp12clvtokcqljnifk2"
   categories:
   - Pet Portraits
   caption:
-  name: ''
+  name: tfp12clvtokcqljnifk2
 - image: "/v1/rebecca-becker/cnxoj2ov8w5oatkoyy1o"
   categories:
   - Pet Portraits
   caption:
-  name: ''
+  name: cnxoj2ov8w5oatkoyy1o
 - image: "/v1/rebecca-becker/utugyvsy72zkqf3wyr4l"
   categories:
   - Pet Portraits
   caption:
-  name: ''
+  name: utugyvsy72zkqf3wyr4l
 - image: "/v1/rebecca-becker/gcqaemlaz3gtywsijfs3"
   categories:
   - Pet Portraits
   caption:
-  name: ''
+  name: gcqaemlaz3gtywsijfs3
 - image: "/v1/rebecca-becker/n3ygdlzislbj2gv6qba3"
   categories:
   - Pet Portraits
   caption:
-  name: ''
+  name: n3ygdlzislbj2gv6qba3
 - image: "/v1/rebecca-becker/aeklelpmirhyisiwb3z8"
   categories:
   - Abstracts/Landscapes
   caption: Available ~ 40" x 40"~ $1600
-  name: ''
+  name: aeklelpmirhyisiwb3z8
 - image: "/v1/rebecca-becker/lasgxnatit2qgprykmzy"
   categories:
   - Abstracts/Landscapes
   caption: Available ~ 36" x 36", $1300
-  name: ''
+  name: lasgxnatit2qgprykmzy
 - image: "/v1/rebecca-becker/jt3phs6calf7qth3af7w"
   categories:
   - Abstracts/Landscapes
   caption: Available ~ 24" x 30"~ $1200
-  name: ''
+  name: jt3phs6calf7qth3af7w
 - image: "/v1/rebecca-becker/u2rlgwfho6pikfdixwfg"
   categories:
   - Abstracts/Landscapes
   caption: Available ~ 30" x 40"~ $1300
-  name: ''
+  name: u2rlgwfho6pikfdixwfg
 - image: "/v1/rebecca-becker/foyz1afqeynxcblrvvte"
   categories:
   - Abstracts/Landscapes
   caption: Available ~ 30" x 40"~ $1200
-  name: ''
+  name: foyz1afqeynxcblrvvte
 - image: "/v1/rebecca-becker/jczkyq7bpyexcshpq9u9"
   categories:
   - Abstracts/Landscapes
   caption: Available~ 40" x 40"~ $1600
-  name: ''
+  name: jczkyq7bpyexcshpq9u9
 - image: "/v1/rebecca-becker/c5cljvpcfys9njgmscoi"
   categories:
   - Abstracts/Landscapes
   caption: Available~ 24" x 30"~ $1200
-  name: ''
+  name: c5cljvpcfys9njgmscoi
 - image: "/v1/rebecca-becker/ersqupekvluwhtxkyyhv"
   categories:
   - Abstracts/Landscapes
   caption: Available ~ 30" x 36" ~ $1200
-  name: ''
+  name: ersqupekvluwhtxkyyhv
 - image: "/v1/rebecca-becker/q92hvvigxwzkcg65kj0j"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: q92hvvigxwzkcg65kj0j
 - image: "/v1/rebecca-becker/vr8oe827sskam02zu1yl"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: vr8oe827sskam02zu1yl
 - image: "/v1/rebecca-becker/bejvuts5afv7rwc3lcka"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: bejvuts5afv7rwc3lcka
 - image: "/v1/rebecca-becker/ceayfajobr4cl7lxtrwz"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: ceayfajobr4cl7lxtrwz
 - image: "/v1/rebecca-becker/hdjj6rf8v1dvh24akqx3"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: hdjj6rf8v1dvh24akqx3
 - image: "/v1/rebecca-becker/gyeywchuhlxe8poe2tfl"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: gyeywchuhlxe8poe2tfl
 - image: "/v1/rebecca-becker/wn75e8imc20pipozkhco"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: wn75e8imc20pipozkhco
 - image: "/v1/rebecca-becker/fudj99dfqzfpgjygdenj"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: fudj99dfqzfpgjygdenj
 - image: "/v1/rebecca-becker/s5anmicyu4661rb8xpyg"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: s5anmicyu4661rb8xpyg
 - image: "/v1/rebecca-becker/szkhtbijx3uzpxpowuqq"
   categories:
   - Abstracts/Landscapes
   caption: ''
-  name: ''
+  name: szkhtbijx3uzpxpowuqq
